@@ -324,31 +324,29 @@ public class DocIndexMetaData {
 
     private ImmutableList<ColumnIdent> getPrimaryKey() {
         Map<String, Object> metaMap = getNested(defaultMappingMap, "_meta");
-        if (metaMap == null) {
+        if (metaMap != null) {
+            ImmutableList.Builder<ColumnIdent> builder = ImmutableList.builder();
+            Object pKeys = metaMap.get("primary_keys");
+            if (pKeys != null) {
+                if (pKeys instanceof String) {
+                    builder.add(ColumnIdent.fromPath((String) pKeys));
+                    return builder.build();
+                } else if (pKeys instanceof Collection) {
+                    Collection keys = (Collection) pKeys;
+                    if (!keys.isEmpty()) {
+                        for (Object pkey : keys) {
+                            builder.add(ColumnIdent.fromPath(pkey.toString()));
+                        }
+                        return builder.build();
+                    }
+                }
+            }
+        }
+        if (getCustomRoutingCol() == null && partitionedByList.isEmpty()) {
             hasAutoGeneratedPrimaryKey = true;
             return ImmutableList.of(ID_IDENT);
         }
-
-        ImmutableList.Builder<ColumnIdent> builder = ImmutableList.builder();
-        Object pKeys = metaMap.get("primary_keys");
-        if (pKeys == null) {
-            hasAutoGeneratedPrimaryKey = true;
-            return ImmutableList.of(ID_IDENT);
-        }
-
-        if (pKeys instanceof String) {
-            builder.add(ColumnIdent.fromPath((String) pKeys));
-        } else if (pKeys instanceof Collection) {
-            Collection keys = (Collection) pKeys;
-            if (keys.isEmpty()) {
-                hasAutoGeneratedPrimaryKey = true;
-                return ImmutableList.of(ID_IDENT);
-            }
-            for (Object pkey : keys) {
-                builder.add(ColumnIdent.fromPath(pkey.toString()));
-            }
-        }
-        return builder.build();
+        return ImmutableList.of();
     }
 
     private ImmutableList<ColumnIdent> getPartitionedBy() {
@@ -391,15 +389,23 @@ public class DocIndexMetaData {
         }
     }
 
-    private ColumnIdent getRoutingCol() {
+    private ColumnIdent getCustomRoutingCol(){
         if (defaultMappingMetaData != null) {
             Map<String, Object> metaMap = getNested(defaultMappingMap, "_meta");
             if (metaMap != null) {
                 String routingPath = (String) metaMap.get("routing");
-                if (routingPath != null) {
+                if (routingPath != null && !routingPath.equals(ID)) {
                     return ColumnIdent.fromPath(routingPath);
                 }
             }
+        }
+        return null;
+    }
+
+    private ColumnIdent getRoutingCol() {
+        ColumnIdent col = getCustomRoutingCol();
+        if (col != null){
+            return col;
         }
         if (primaryKey.size() == 1) {
             return primaryKey.get(0);
