@@ -196,7 +196,7 @@ public class TestingTableInfo extends AbstractDynamicTableInfo {
     private final RowGranularity granularity;
     private final List<ColumnIdent> primaryKey;
     private final boolean isAlias;
-    private final boolean hasAutoGeneratedPrimaryKey;
+    private boolean hasAutoGeneratedPrimaryKey = false;
     private final List<ColumnIdent> partitionedBy;
     private final List<PartitionName> partitions;
     private final ColumnPolicy columnPolicy;
@@ -226,11 +226,14 @@ public class TestingTableInfo extends AbstractDynamicTableInfo {
         this.granularity = granularity;
         this.routing = routing;
         if (primaryKey == null || primaryKey.isEmpty()){
-            this.primaryKey = ImmutableList.of(DocIndexMetaData.ID_IDENT);
-            this.hasAutoGeneratedPrimaryKey = true;
+            if ((clusteredBy == null || clusteredBy.equals("_id")) && partitionedBy.isEmpty()){
+                this.primaryKey = ImmutableList.of(DocIndexMetaData.ID_IDENT);
+                this.hasAutoGeneratedPrimaryKey = true;
+            } else {
+                this.primaryKey = ImmutableList.of();
+            }
         } else {
             this.primaryKey = primaryKey;
-            this.hasAutoGeneratedPrimaryKey = false;
         }
         this.clusteredBy = clusteredBy;
         this.isAlias = isAlias;
